# Maillot-a-pois

android/: README.md  trajet_pour_presentation_FINAL (1).kml
android/app/: build.gradle  proguard-rules.pro
android/app/src/androidTest/java/com/example/guilhem/firstmapbox/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/guilhem/firstmapbox/: Clock.java  Communications.java  MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/example/guilhem/firstmapbox/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
data/: Accident_pieton_quebec.geojson  QuebecCity_BicycleInfrastructure.geojson  accident_actif_quebec_city.geojson  accident_velo.csv  accident_velo_quebec.geojson  gtfs_stops_with_frequency.geojson  osm_heat_islands_metadata.txt  synthesis_data_company.csv
data/script/: process_address_name.py
html/: README.md  index.html  main.css  main.js
server/: CMakeLists.txt  REAME.md
server/server/: restful_app.py
server/server/static/: index.html  main.css  main.js
server/server/static/data/: README.md  osm_freeways.geojson  rapports-accident-2015-processed.csv  synthesis_data_user.csv  user_trace.dbf  user_trace.shp  user_trace.shx
server/server/static/data/script/: Untitled.ipynb  process_address_name.ipynb
server/src/: myServer.cpp
